--- a/post_est/results_config.json
+++ b/post_est/results_config.json
@@ -5,6 +5,6 @@
   "agent_data_45W": "data/raw/agent_data_45W.csv",
   "agent_data_subsidy": "data/raw/agent_data.csv",
   "ownership_mode": "owner",
-  "owner_mapping_path": "../estimation/blp_estimation/data/archive/brand_owner_hq.xlsx",
+  "owner_mapping_path": "data/raw/brand_owner_hq.xlsx",
   "allow_unmapped_brands": false
 }
